--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cluster": "^0.7.7",
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "file-stream-rotator": "^0.5.7",
     "morgan": "^1.10.0",
+    "net": "^1.0.2",
+    "os": "^0.1.2",
     "smoothie": "1.19.0",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.3",
