添加测试脚本

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "socketio-examples",
   "version": "0.1.0",
   "dependencies": {
+    "artillery": "^2.0.0-10",
+    "artillery-engine-socketio-v3": "^1.1.2",
     "body-parser": "^1.19.1",
     "cluster": "^0.7.7",
     "dayjs": "^1.10.7",
